# textquill

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md  config.json  config.toml  go.mod  go.sum  main.cpp  meson.build
.github/workflows/: build.yml
docs/: configuration.md  configuration.md.rej  placeholder.md
include/opencv4/opencv2/: cvconfig.h  opencv_modules.hpp
src/: main.cpp  textquill.go  textquill.go.orig  textquill.go.rej  wrappers.hpp
